--- a/certificados.html
+++ b/certificados.html
@@ -128,6 +128,38 @@
       <label class="bar" for="slide9"></label>
       <label class="bar" for="slide10"></label>
     </div>
+    <div class="cert-menor">
+      <div class="cert-image">
+        <img src="certificados/cert01.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert02.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert03.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert04.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert05.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert06.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert07.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert08.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert09.png" alt="" />
+      </div>
+      <div class="cert-image">
+        <img src="certificados/cert10.png" alt="" />
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
