--- a/projetos.html
+++ b/projetos.html
@@ -68,39 +68,41 @@
       <div id="tit">
         <h1>Rodrigo Silva Farias</h1>
       </div>
-      <div class="dash-container">
-        <div class="dashboard">
-          <h3>ERP - Comercio Varejista 1</h3>
-          <iframe
-            title="Dash - Dados Diários Mercado."
-            width="600"
-            height="373.5"
-            src="https://app.powerbi.com/view?r=eyJrIjoiZWE1ZmU1ZGUtM2E0NS00MzUxLWFhNzctZmRmMGU1NmE4NDllIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9&pageName=ReportSection05061ab929e26842619a"
-            frameborder="0"
-            allowfullscreen="true"
-          ></iframe>
-        </div>
-        <div class="dashboard">
-          <h3>Projeto de Engenharia</h3>
-          <iframe
-            title="Dash - Cliente Lienge-Gerdau - Avanço Físico LIENGE"
-            width="600"
-            height="373.5"
-            src="https://app.powerbi.com/view?r=eyJrIjoiYTM0YWU5ODYtZmE2MS00MDg5LTgwNGItMGU0YjMyZmQzOTdhIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            frameborder="0"
-            allowfullscreen="true"
-          ></iframe>
-        </div>
-        <div class="dashboard">
-          <h3>Projeto Financeiro</h3>
-          <iframe
-            title="Dash - Legale Financeiro - Analise Financeira"
-            width="600"
-            height="373.5"
-            src="https://app.powerbi.com/view?r=eyJrIjoiYzA4OTQwYTktZTZjYy00NGVkLTk5NzEtMzYwNmFjMTFhMDE5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            frameborder="0"
-            allowfullscreen="true"
-          ></iframe>
+      <div class="td-iframe">
+        <div class="dash-container">
+          <div class="dashboard">
+            <h3>ERP - Comercio Varejista 1</h3>
+            <iframe
+              title="Dash - Dados Diários Mercado."
+              width="600"
+              height="373.5"
+              src="https://app.powerbi.com/view?r=eyJrIjoiZWE1ZmU1ZGUtM2E0NS00MzUxLWFhNzctZmRmMGU1NmE4NDllIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9&pageName=ReportSection05061ab929e26842619a"
+              frameborder="0"
+              allowfullscreen="true"
+            ></iframe>
+          </div>
+          <div class="dashboard">
+            <h3>Projeto de Engenharia</h3>
+            <iframe
+              title="Dash - Cliente Lienge-Gerdau - Avanço Físico LIENGE"
+              width="600"
+              height="373.5"
+              src="https://app.powerbi.com/view?r=eyJrIjoiYTM0YWU5ODYtZmE2MS00MDg5LTgwNGItMGU0YjMyZmQzOTdhIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
+              frameborder="0"
+              allowfullscreen="true"
+            ></iframe>
+          </div>
+          <div class="dashboard">
+            <h3>Projeto Financeiro</h3>
+            <iframe
+              title="Dash - Legale Financeiro - Analise Financeira"
+              width="600"
+              height="373.5"
+              src="https://app.powerbi.com/view?r=eyJrIjoiYzA4OTQwYTktZTZjYy00NGVkLTk5NzEtMzYwNmFjMTFhMDE5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
+              frameborder="0"
+              allowfullscreen="true"
+            ></iframe>
+          </div>
         </div>
       </div>
     </main>
@@ -110,88 +112,91 @@
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYzIzMmE4MDAtMWExNi00ZWNkLWJjOTctMGFkODcyNTcwYmU2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Rede Hoteleira</a
+            >Rede Hoteleira  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNTNiNGMyZjUtMzQ2OS00NWU4LThhZDYtNzUwYzUwNThhMjAzIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >ERP - Comercio Varejista 2</a
+            >ERP - Comercio Varejista 2  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYjUyOWY2NzctZmZiOC00OTVhLThjMzktOGE2ODNjODBmYzFkIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Estudo Varejo IBGE</a
+            >Estudo Varejo IBGE  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiZDRjNjJiYWYtNzlmOS00ZTAyLTljYzktNmZlNDkzMDhjMWE4IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >ADM Contratos</a
+            >ADM Contratos  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiZTM2ZTU0NTUtNDI4NC00OTY2LThlYjMtM2EzYzUwZjkxYTk2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Departamento Pessoal e RH</a
+            >Departamento Pessoal e RH  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYWVlYzI0ZWUtOTBhYS00ZGMwLTk0YmYtMzEwZjQ0OTMyMGFmIiwidCI6ImQwM2Y3ZTNiLTBjZGUtNDczMi1hY2RmLTE2Yzk3MTU5YTJiNyJ9"
-            >People Analytics</a
+            >People Analytics  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYTNjOTUwY2MtYjQwZC00ZWQwLWIyMzMtODFkMDlhZDE2ZjlmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Agronegócio</a
+            >Agronegócio  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYmQ1MzNkOGEtZDk1Ny00YzU3LWI5MDItOWRkYWIzYWQxOGE2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Indústria de Base - Fabricação/Calderaria</a
+            >Indústria de Base - Fabricação/Calderaria  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNjM5MDE1YjItY2ZhMy00MmE1LWFmNjctNmMzYWEzMWRjOTA5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Consumidor - Reclamações</a
+            >Consumidor - Reclamações  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNGQ0ODFlNmUtMGI5MC00YjY2LTlmNDEtZTEwN2I5ZTFmNmNmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Engenharia - Obra Montagem Eletromecânica</a
+            >Engenharia - Obra Montagem Eletromecânica  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYzA4OTQwYTktZTZjYy00NGVkLTk5NzEtMzYwNmFjMTFhMDE5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Financeiro</a
+            >Financeiro  &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiMzJjZjllNWItMTg5Yy00ZGU5LTk5ZWQtYWE1NTU0ZjY1ZDZmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9&pageName=ReportSectionba1930455434c915048a"
-            >Advocacia</a
+            >Advocacia  &#x1F517</a
           >
         </li>
       </ul>
     </div>
+    <header class="baixo">
+      <p>Para ver mais projetos como este, <a href="links.html" target="_blank">clique aqui</a> para ir até outra pagina e ver todos os projetos já realizados</p>
+    </header>
 
     <script src="script.js"></script>
   </body>
