--- a/links.html
+++ b/links.html
@@ -19,7 +19,7 @@
         box-sizing: border-box;
         text-align: justify;
       }
-      main ul{
+      main ul {
         list-style: none;
         padding: 0px;
         background-color: black;
@@ -28,39 +28,37 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        
       }
-      ul li{
+
+      ul li {
         padding: 15px;
         font-size: 16pt;
       }
 
-      ul li a{
+      ul li a {
         color: white;
         margin: 10px;
       }
 
-      ul li a:hover{
-        transition: .7s;
+      ul li a:hover {
+        transition: 0.7s;
         color: red;
         margin: 10px;
-
       }
 
       header {
         background-color: rgb(174, 174, 174);
         padding: 10px;
-       
       }
-      header h1{
+      header h1 {
         text-align: center;
       }
 
-      header h1 a{
+      header h1 a {
         color: white;
       }
-      header h1 a:hover{
-        transition: .7s;
+      header h1 a:hover {
+        transition: 0.7s;
         color: red;
       }
     </style>
@@ -72,73 +70,85 @@
     <main>
       <ul>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYzIzMmE4MDAtMWExNi00ZWNkLWJjOTctMGFkODcyNTcwYmU2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >Rede Hoteleira</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNTNiNGMyZjUtMzQ2OS00NWU4LThhZDYtNzUwYzUwNThhMjAzIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >ERP - Comercio Varejista 2</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYjUyOWY2NzctZmZiOC00OTVhLThjMzktOGE2ODNjODBmYzFkIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >Estudo Varejo IBGE</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiZDRjNjJiYWYtNzlmOS00ZTAyLTljYzktNmZlNDkzMDhjMWE4IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >ADM Contratos</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiZTM2ZTU0NTUtNDI4NC00OTY2LThlYjMtM2EzYzUwZjkxYTk2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >Departamento Pessoal e RH</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYWVlYzI0ZWUtOTBhYS00ZGMwLTk0YmYtMzEwZjQ0OTMyMGFmIiwidCI6ImQwM2Y3ZTNiLTBjZGUtNDczMi1hY2RmLTE2Yzk3MTU5YTJiNyJ9"
             >People Analytics</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYTNjOTUwY2MtYjQwZC00ZWQwLWIyMzMtODFkMDlhZDE2ZjlmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >Agronegócio</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYmQ1MzNkOGEtZDk1Ny00YzU3LWI5MDItOWRkYWIzYWQxOGE2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >Indústria de Base - Fabricação/Calderaria</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNjM5MDE1YjItY2ZhMy00MmE1LWFmNjctNmMzYWEzMWRjOTA5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >Consumidor - Reclamações</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNGQ0ODFlNmUtMGI5MC00YjY2LTlmNDEtZTEwN2I5ZTFmNmNmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >Engenharia - Obra Montagem Eletromecânica</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYzA4OTQwYTktZTZjYy00NGVkLTk5NzEtMzYwNmFjMTFhMDE5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
             >Financeiro</a
           >
         </li>
         <li>
-          <a target="_blank"
+          <a
+            target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiMzJjZjllNWItMTg5Yy00ZGU5LTk5ZWQtYWE1NTU0ZjY1ZDZmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9&pageName=ReportSectionba1930455434c915048a"
             >Advocacia</a
           >
