--- a/links.html
+++ b/links.html
@@ -61,6 +61,24 @@
         transition: 0.7s;
         color: red;
       }
+
+      @media screen and (max-width: 515px) {
+        a{
+          font-size: 12pt;
+        }
+        header a{
+          font-size: 24pt;
+        }
+        
+      }
+      @media screen and (max-width: 405px) {
+        a{
+          font-size: 10pt;
+        }
+        header a{
+          font-size: 24pt;
+        }
+      }
     </style>
   </head>
   <body>
@@ -73,84 +91,84 @@
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYzIzMmE4MDAtMWExNi00ZWNkLWJjOTctMGFkODcyNTcwYmU2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Rede Hoteleira</a
+            >Rede Hoteleira &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNTNiNGMyZjUtMzQ2OS00NWU4LThhZDYtNzUwYzUwNThhMjAzIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >ERP - Comercio Varejista 2</a
+            >ERP - Comercio Varejista 2 &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYjUyOWY2NzctZmZiOC00OTVhLThjMzktOGE2ODNjODBmYzFkIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Estudo Varejo IBGE</a
+            >Estudo Varejo IBGE &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiZDRjNjJiYWYtNzlmOS00ZTAyLTljYzktNmZlNDkzMDhjMWE4IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >ADM Contratos</a
+            >ADM Contratos &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiZTM2ZTU0NTUtNDI4NC00OTY2LThlYjMtM2EzYzUwZjkxYTk2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Departamento Pessoal e RH</a
+            >Departamento Pessoal e RH &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYWVlYzI0ZWUtOTBhYS00ZGMwLTk0YmYtMzEwZjQ0OTMyMGFmIiwidCI6ImQwM2Y3ZTNiLTBjZGUtNDczMi1hY2RmLTE2Yzk3MTU5YTJiNyJ9"
-            >People Analytics</a
+            >People Analytics &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYTNjOTUwY2MtYjQwZC00ZWQwLWIyMzMtODFkMDlhZDE2ZjlmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Agronegócio</a
+            >Agronegócio &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYmQ1MzNkOGEtZDk1Ny00YzU3LWI5MDItOWRkYWIzYWQxOGE2IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Indústria de Base - Fabricação/Calderaria</a
+            >Indústria de Base - Fabricação/Calderaria &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNjM5MDE1YjItY2ZhMy00MmE1LWFmNjctNmMzYWEzMWRjOTA5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Consumidor - Reclamações</a
+            >Consumidor - Reclamações &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiNGQ0ODFlNmUtMGI5MC00YjY2LTlmNDEtZTEwN2I5ZTFmNmNmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Engenharia - Obra Montagem Eletromecânica</a
+            >Engenharia - Obra Montagem Eletromecânica &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiYzA4OTQwYTktZTZjYy00NGVkLTk5NzEtMzYwNmFjMTFhMDE5IiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9"
-            >Financeiro</a
+            >Financeiro &#x1F517</a
           >
         </li>
         <li>
           <a
             target="_blank"
             href="https://app.powerbi.com/view?r=eyJrIjoiMzJjZjllNWItMTg5Yy00ZGU5LTk5ZWQtYWE1NTU0ZjY1ZDZmIiwidCI6ImI4MTNjODAwLTEwNDItNDBkNy05Yjk1LWY2N2ExZTdhNmFmMCJ9&pageName=ReportSectionba1930455434c915048a"
-            >Advocacia</a
+            >Advocacia &#x1F517</a
           >
         </li>
       </ul>
