--- a/projetos.html
+++ b/projetos.html
@@ -68,6 +68,9 @@
       <div id="tit">
         <h1>Rodrigo Silva Farias</h1>
       </div>
+      <div class="baixo">
+        <p>Para ver mais projetos como este, <a href="links.html" target="_blank">clique aqui</a> para ir até outra pagina e ver todos os projetos já realizados</p>
+      </div>
       <div class="td-iframe">
         <div class="dash-container">
           <div class="dashboard">
@@ -194,10 +197,7 @@
         </li>
       </ul>
     </div>
-    <header class="baixo">
-      <p>Para ver mais projetos como este, <a href="links.html" target="_blank">clique aqui</a> para ir até outra pagina e ver todos os projetos já realizados</p>
-    </header>
-
+  
     <script src="script.js"></script>
   </body>
 </html>
