--- a/projetos.html
+++ b/projetos.html
@@ -69,7 +69,7 @@
         <h1>Rodrigo Silva Farias</h1>
       </div>
       <div class="baixo">
-        <p>Para ver mais projetos como este, <a href="links.html" target="_blank">clique aqui</a> para ir até outra pagina e ver todos os projetos já realizados</p>
+        <p>Para ver mais projetos como este, <a href="links.html" target="_blank">&#x1F517 clique aqui &#x1F517</a> para ir até outra pagina e ver todos os projetos já realizados</p>
       </div>
       <div class="td-iframe">
         <div class="dash-container">
