--- a/curso.html
+++ b/curso.html
@@ -102,9 +102,13 @@
           ferramenta bem fãcil de aprender e bastante intuitiva, tornando o dia
           a dia dos analistas de dados/negócios bem prático e muito prazeroso.
         </p>
-        <div class="foto-aula"></div>
+        <div class="fotos-curso">
+          <div class="foto-aula"></div>
+          <div class="foto-certificado"></div>
+        </div>
       </div>
     </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
