--- a/links.html
+++ b/links.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap");
 
