--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a href="index.html" class="item-list">Home |</a>
             </li>
             <li>
-              <a href="projetos.html" class="item-list">Projetos realizados |</a>
+              <a href="projetos.html" class="item-list">Projetos realizados - BI |</a>
             </li>
             <li>
               <a href="certificados.html" class="item-list">Certificados |</a>
